test/expected/explain_pcf_i.out
explain int (*f) const
                 ^
18: syntax error: "const": unexpected token ("const" is a keyword); did you mean "cast"?
declare f as pointer to int
